--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.469.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
